--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0",
-    "@supabase/supabase-js": "^2.49.1",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "lucide-react": "0.475.0",
+    "recharts": "2.15.0",
+    "@supabase/supabase-js": "2.48.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
